--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
             </ul>
         </div>
         <div class="img"> 
-            <img src="logo EDS.PNG" alt="TM" width="50" height="50">
+            <img src="https://ibb.co/ByTMbdZ" alt="TM" width="50" height="50">
             </div>
         </div>
         <div class="a-propos">
             <h2>True-Manno info</h2>
             <div class="photo">
-                <img src="kd.png" alt="true manno" height="200" width="200">
+                <img src="https://ibb.co/ByTMbdZ> alt="true manno" height="200" width="200">
             </div>
             <h5>Notre programme de formation en ligne est dedie aus technologie de l'informationet a la securite informatique. Nous offrons des cours interractifs et des atelier pratiques concus pour accompagner les proffesionnels et les passionnes dans le devceloppement de leurs competences. Grace a notre approche centresur la pratique et les enjeux reel du secteur, vous serez en mesure de maitriser les technologie les plus recentes et de vous adapter aux exigences croissantes de ce domaineen pleine transformation. <br> Rejoignez-nous pour rester a la pointe de l'inovation et faire evoluer votre carriere.</h5>
         </div>
@@ -38,7 +38,7 @@
         </div>
         <div class="fw">
             <div class="photo">
-                <img src="kd.png" alt="True-Manno" height="200" width=" 200">
+                <img src="https://ibb.co/30Drkhr" alt="True-Manno" height="200" width=" 200">
             </div>
             <h5>Chez nous nous offrons des formations em technologie de l'information pour aider nos clients a maitriser les outils essentiels a leur succes dans un monde en constante evolutions</h5>
         </div>
