--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </div>
         <div class="img"> 
-            <img src="https://ibb.co/ByTMbdZ" alt="TM" width="50" height="50">
+            <img src="https://ibb.co/NFvj76C" alt="TM" width="50" height="50">
             </div>
         </div>
         <div class="a-propos">
