--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="form">
             <div class="photo">
                 <h2>FORMATION EN DEVELOPMEN WEB</h2>
-                <img src="kd.png" alt="TM" width="200" height="200">
+                <img src="https://ibb.co/30Drkhr" alt="TM" width="200" height="200">
             </div>
             <h5>Notre programme complet, adapte aux debutants comme aux initie vous apprendre a cree des site web dynamiques et interractifs grace a des competences technniques solides et des outils moderne. <br> Rejoignez-nous pour developpe vos talents et propulse votre carriere</h5>
         </div>
