--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="a-propos">
             <h2>True-Manno info</h2>
             <div class="photo">
-                <img src="https://ibb.co/ByTMbdZ> alt="true manno" height="200" width="200">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT7CdvDH-z1UkZTxMx5JhD8rPaHgl4JKTW20g&usqp=CAU"> alt="true manno" height="200" width="200">
             </div>
             <h5>Notre programme de formation en ligne est dedie aus technologie de l'informationet a la securite informatique. Nous offrons des cours interractifs et des atelier pratiques concus pour accompagner les proffesionnels et les passionnes dans le devceloppement de leurs competences. Grace a notre approche centresur la pratique et les enjeux reel du secteur, vous serez en mesure de maitriser les technologie les plus recentes et de vous adapter aux exigences croissantes de ce domaineen pleine transformation. <br> Rejoignez-nous pour rester a la pointe de l'inovation et faire evoluer votre carriere.</h5>
         </div>
